# training-llm-application-development-starter

./: .gitignore  Makefile  README.md  pyproject.toml
app/: chat_cli.py
app/advanced_rag/: factory.py
app/advanced_rag/chains/: base.py  naive.py
app/agent_design_pattern/: settings.py
app/agent_design_pattern/common/: reflection_manager.py
app/agent_design_pattern/passive_goal_creator/: main.py
app/agent_design_pattern/prompt_optimizer/: main.py
app/agent_design_pattern/response_optimizer/: main.py
app/agent_design_pattern/role_based_cooperation/: main.py
app/agent_design_pattern/self_reflection/: main.py
app/agent_design_pattern/single_path_plan_generation/: main.py
data/: examples.csv
docs/: ec2_code_server.md  ec2_code_server.yaml  setup.sh  update_cloudfront_origin.sh
pages/: day1_check.py  day1_survey.py  forms.py
