[project]
name = "training-llm-application-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "decorator==5.2.1",
    "faiss-cpu==1.11.0",
    "langchain-chroma==0.2.4",
    "langchain-cohere==0.4.4",
    "langchain-community==0.3.24",
    "langchain-core==0.3.61",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.18",
    "langchain-text-splitters==0.3.8",
    "langgraph==0.4.7",
    "nltk==3.9.1",
    "numpy==2.2.6",
    "openai==1.82.0",
    "pydantic-settings==2.9.1",
    "python-dotenv==1.1.0",
    "ragas==0.2.15",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.13.0",
    "retry==0.9.2",
    "streamlit-feedback==0.1.4",
    "streamlit==1.45.1",
    "tavily-python==0.7.3",
]

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]
