[project]
name = "training-llm-application-development"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "decorator==5.2.1",
    "faiss-cpu==1.12.0",
    "langchain-chroma==0.2.5",
    "langchain-cohere==0.4.5",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-experimental==0.3.4",
    "langchain-openai==0.3.30",
    "langchain-text-splitters==1.0.0a1",
    "langgraph-checkpoint-sqlite==2.0.11",
    "langgraph==0.6.5",
    "nltk==3.9.1",
    "numpy==2.3.2",
    "openai==1.99.9",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "ragas==0.3.1",
    "rank-bm25==0.2.2",
    "rapidfuzz==3.13.0",
    "retry==0.9.2",
    "streamlit-feedback==0.1.4",
    "streamlit==1.48.1",
    "tavily-python==0.7.10",
]

[tool.uv]
dev-dependencies = ["jupyter==1.1.1"]
